--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -1,20 +1,40 @@
 header {
-  margin-top: 20vh;
+  padding-top: 20vh;
   display: flex;
   justify-content: center;
   max-width: 100vw;
+  height: 100%;
   overflow: hidden;
   word-break: break-word;
+  box-sizing: border-box;
 }
 
 .title {
   margin-bottom: calc(var(--golden-ratio) * 0.1em);
-  font-size: calc(var(--golden-ratio) * 3rem);
+  /* font-size: calc(var(--golden-ratio) * 3rem); */
+
+  font-family: 'Fjalla One', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: calc(var(--golden-ratio) * 4em);
+  letter-spacing: 0.07em;
+  text-transform: uppercase;
 }
 
 .subtitle {
   opacity: 0.8;
   font-size: calc(var(--golden-ratio) * 1em);
+  font-style: normal;
+  font-weight: 300;
+  line-height: 20px;
+
+  /* letter-spacing: 0.11em; */
+  text-transform: capitalize;
+}
+
+.hero-container {
+  height: 300vh;
+  position: relative;
 }
 
 @keyframes shake {
@@ -147,51 +167,36 @@ header {
   animation-iteration-count: 1;
 }
 
+#model-container-container {
+  /* left: 0; */
+  position: sticky;
+  /* top: -100vh; */
+  /* min-height: 200vh; */
+  /* right: 0; */
+  bottom: -19.98vh;
+}
 #model-container {
-  height: 16%;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  z-index: -1;
+  pointer-events: none;
+  height: 100vh;
 }
-
 #model-container canvas {
-  display: block;
-  position: relative;
-  top: -3vh;
+  left: 0;
+  right: 0;
   width: 100vw;
   height: 100%;
-}
-
-#background-overlay {
-  display: none;
-
-  background: radial-gradient(at center top, var(--surface) 10%, var(--bg) 40%);
-  position: fixed;
-  z-index: -1;
-  max-height: 100vh;
-
-  top: calc(var(--golden-ratio) * 1em);
-  bottom: calc(var(--golden-ratio) * 1em);
-  left: calc(var(--golden-ratio) * 1em);
-  right: calc(var(--golden-ratio) * 1em);
-  border-radius: calc(var(--golden-ratio) * 0.5em);
-}
-
-.hero-container {
-  height: 100%;
+  /* position: sticky; */
 }
 
 .idk-yet {
-  flex: 1;
-  width: 100vw;
-  background-color: var(--surface);
-
+  height: 100vh;
+  background-color: var(--beaver);
   padding-top: calc(var(--golden-ratio) * 6em);
   text-align: center;
   text-transform: uppercase;
+}
+.idk-yet > div {
+  position: fixed;
+  top: 0;
 }
 
 @media (min-width: 768px) {
@@ -209,16 +214,11 @@ header {
     font-size: calc(var(--golden-ratio) * 1em);
   }
 
-  #background-overlay {
-    display: block;
-  }
-
   #model-container {
-    top: 0;
-    height: 200vh;
+    /* top: 0; */
+    /* height: 200vh; */
   }
   .idk-yet {
-    background-color: transparent;
   }
 }
 @media (min-width: 1280px) {
